// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Divider Component renders divider 1`] = `
<DocumentFragment>
  <span>
    Text mocked 1
  </span>
  <div
    class="ant-divider ant-divider-horizontal ant-divider-no-default-orientation-margin-left"
    role="separator"
  />
  <span>
    Text mocked 2
  </span>
</DocumentFragment>
`;

exports[`Divider Component renders horizontal divider with title correctly 1`] = `
<DocumentFragment>
  <span>
    Text mocked 1
  </span>
  <div
    class="ant-divider ant-divider-horizontal ant-divider-with-text ant-divider-with-text-left ant-divider-no-default-orientation-margin-left"
    role="separator"
  >
    <span
      class="ant-divider-inner-text"
      style="margin-left: 24px;"
    >
      Some text
    </span>
  </div>
  <span>
    Text mocked 2
  </span>
</DocumentFragment>
`;

exports[`Divider Component renders vertical divider correctly 1`] = `
<DocumentFragment>
  <span>
    Text mocked 1
  </span>
  <div
    class="ant-divider ant-divider-vertical ant-divider-no-default-orientation-margin-left"
    role="separator"
  />
  <span>
    Text mocked 2
  </span>
</DocumentFragment>
`;
